# smartdairy

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
apps/: __init__.py
apps/alerts/: __init__.py  admin.py  apps.py  models.py
apps/alerts/api/: serializers.py  urls.py  views.py
apps/alerts/migrations/: 0001_initial.py  0002_initial.py
apps/core/: __init__.py  admin.py  api.py  context_processors.py  models.py
apps/dairy/: __init__.py  admin.py  apps.py  models.py
apps/dairy/api/: __init__.py  serializers.py  urls.py  views.py
apps/dairy/migrations/: 0001_initial.py  (+3 more)
apps/farm/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/feeds/: __init__.py  admin.py  apps.py  models.py
apps/health/: __init__.py  admin.py  apps.py  models.py
apps/sales/: __init__.py  admin.py  apps.py  models.py
apps/tasks/: __init__.py  admin.py  apps.py  models.py
docker/cms/: Dockerfile  docker-entrypoint.sh
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Layout.tsx  Loading.tsx  Modal.tsx
frontend/lib/: api.ts  store.ts  utils.ts
scripts/: sample_users.sql  sample_yearly_data.sql
smartdairy/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
smartdairy/settings/: __init__.py  base.py  dev.py  production.py
templates/: base.html  home.html
(+43 files in other folders)
